Fix tile layout issue (when running in browser)

--- a/launcher/index.html
+++ b/launcher/index.html
@@ -65,7 +65,7 @@
                     },
                     {
                         folder: "kb3",
-                        name: "KB #3",
+                        name: "Dummy KB",
                         description: "Knowledge base 3",
                         image: "images/icon.png",
                         access: ["user"]
