Work to make the tiles perform better on desktop
Set title from KB description
Better hover styling

--- a/launcher/index.html
+++ b/launcher/index.html
@@ -56,21 +56,21 @@
                     {
                         folder: "kb2",
                         name: "Pension Advisor",
-                        description: "Knowledge base 2",
+                        description: "Advice on recovering a lost pension",
                         image: "xrkb/assets/pas_logo.png",
                         access: [""]
                     },
                     {
                         folder: "kb1",
                         name: "Expenses Claims",
-                        description: "Knowledge base 1",
+                        description: "Process a small expenses claim",
                         image: "icon.png",
                         access: [""]
                     },
                     {
                         folder: "kb3",
                         name: "Dummy KB",
-                        description: "Knowledge base 3",
+                        description: "Dummy knowledge base to demonstrate user access levels",
                         image: "images/icon.png",
                         access: ["user"]
                     }
